# valinta

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  releaze-plz.toml
.github/workflows/: on_pr_and_on_push.yml  on_push_on_main.yml
src/: def.rs  display.rs  error.rs  filter.rs  lib.rs  modules.rs  multiSelect.rs  select.rs  usekey.rs
src/modules/: def.rs  display.rs  filter.rs  multi_select.rs  terminal.rs  test.rs
src/multi_select/: display.rs  error.rs  filter.rs
src/terminal/: display.rs  get_size.rs  mod.rs
src/utils/: array.rs  mod.rs  number_of_lines.rs  number_of_rendered_lines.rs
