[package]
name = "valinta"
version = "0.2.0"
edition = "2024"
authors = ["Victor Aubinaud"]
description = "Valinta a zero config Rust crate 🦀 for multiple selection in the terminal"
documentation= "https://github.com/vi17250/valinta"
repository= "https://github.com/vi17250/valinta"
homepage= "https://github.com/vi17250/valinta"
license = "MIT"
readme = "README.md"

[dependencies]
console = "0.16.1"
crossterm = "0.29.0"
unicode-width = "0.2.2"

[lib]
doctest = false  
